--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auth Me</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/download.png" />
+    <title>TeeLogic</title>
   </head>
   <body>
     <div id="root"></div>
